@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.3
+.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.14
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "rxvt 3"
-.TH rxvt 3 "2006-01-20" "7.1" "RXVT-UNICODE"
+.TH rxvt 3 "2006-01-21" "7.2" "RXVT-UNICODE"
 .SH "NAME"
 @@RXVT_NAME@@perl \- rxvt\-unicode's embedded perl interpreter
 .SH "SYNOPSIS"
@@ -267,6 +267,30 @@ bottom. \f(CW\*(C`Escape\*(C'\fR leaves search mode and returns to the point whe
 was started, while \f(CW\*(C`Enter\*(C'\fR or \f(CW\*(C`Return\*(C'\fR stay at the current position and
 additionally stores the first match in the current line into the primary
 selection.
+.IP "readline (enabled by default)" 4
+.IX Item "readline (enabled by default)"
+A support package that tries to make editing with readline easier. At the
+moment, it reacts to clicking with the left mouse button by trying to
+move the text cursor to this position. It does so by generating as many
+cursor-left or cursor-right keypresses as required (the this only works
+for programs that correctly support wide characters).
+.Sp
+To avoid too many false positives, this is only done when:
+.RS 4
+.IP "\- the mouse is on the same (multi\-row\-) line as the text cursor." 4
+.IX Item "- the mouse is on the same (multi-row-) line as the text cursor."
+.PD 0
+.IP "\- the primary screen is currently being displayed." 4
+.IX Item "- the primary screen is currently being displayed."
+.IP "\- the text cursor is visible." 4
+.IX Item "- the text cursor is visible."
+.RE
+.RS 4
+.PD
+.Sp
+The normal selection mechanism isn't disabled, so quick successive clicks
+might interfere with selection creation in harmless ways.
+.RE
 .IP "selection-autotransform" 4
 .IX Item "selection-autotransform"
 This selection allows you to do automatic transforms on a selection
@@ -309,19 +333,6 @@ To expand the example above to typical perl error messages (\*(L"\s-1XXX\s0 at
 The first line tells the selection code to treat the unchanging part of
 every error message as a selection pattern, and the second line transforms
 the message into vi commands to load the file.
-.IP "readline" 4
-.IX Item "readline"
-A support package that tries to make editing with readline easier. At the
-moment, it reacts to clicking with the left mouse button by trying to
-move the text cursor to this position. It does so by generating as many
-cursor-left or cursor-right keypresses as required (the this only works
-for programs that correctly support wide characters).
-.Sp
-It only works when clicking into the same line (possibly extended over
-multiple rows) as the text cursor and on the primary screen, to reduce the
-risk of misinterpreting. The normal selection isn't disabled, so quick
-successive clicks might interfere with selection creation in harmless
-ways.
 .IP "tabbed" 4
 .IX Item "tabbed"
 This transforms the terminal into a tabbar with additional terminals, that
@@ -1121,6 +1132,10 @@ AltGr), the meta key (often Alt) and the num lock key, if applicable.
 .el .IP "$screen = \f(CW$term\fR\->current_screen" 4
 .IX Item "$screen = $term->current_screen"
 Returns the currently displayed screen (0 primary, 1 secondary).
+.ie n .IP "$cursor_is_hidden = $term\->hidden_cursor" 4
+.el .IP "$cursor_is_hidden = \f(CW$term\fR\->hidden_cursor" 4
+.IX Item "$cursor_is_hidden = $term->hidden_cursor"
+Returns wether the cursor is currently hidden or not.
 .ie n .IP "$view_start = $term\->view_start ([$newvalue])" 4
 .el .IP "$view_start = \f(CW$term\fR\->view_start ([$newvalue])" 4
 .IX Item "$view_start = $term->view_start ([$newvalue])"
